# dlstreamer

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODESTYLE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  RELEASE_NOTES.md  annotated.html  audio__event_8h.html  audio__event_8h_source.html  audio__frame_8h.html  audio__frame_8h_source.html  classGVA_1_1AudioEvent-members.html  classGVA_1_1AudioEvent.html  classGVA_1_1AudioEvent__coll__graph.map  classGVA_1_1AudioEvent__coll__graph.md5  classGVA_1_1AudioFrame-members.html  classGVA_1_1AudioFrame.html  classGVA_1_1RegionOfInterest-members.html  classGVA_1_1RegionOfInterest.html  classGVA_1_1RegionOfInterest__coll__graph.map  classGVA_1_1RegionOfInterest__coll__graph.md5  classGVA_1_1Tensor-members.html  classGVA_1_1Tensor.html  classGVA_1_1VideoFrame-members.html  classGVA_1_1VideoFrame.html  classes.html  classgstgva_1_1region__of__interest_1_1RegionOfInterest-members.html  classgstgva_1_1region__of__interest_1_1RegionOfInterest.html  classgstgva_1_1region__of__interest_1_1RegionOfInterest__coll__graph.map  classgstgva_1_1region__of__interest_1_1RegionOfInterest__inherit__graph.md5  classgstgva_1_1tensor_1_1Tensor-members.html  classgstgva_1_1tensor_1_1Tensor.html  classgstgva_1_1tensor_1_1Tensor_1_1LAYOUT-members.html  classgstgva_1_1tensor_1_1Tensor_1_1LAYOUT.html  (+89 more)
gst/: CMakeLists.txt
gst/audio_inference_elements/: CMakeLists.txt  register_elements.c
gst/base/: CMakeLists.txt  gva_base_inference.c  gva_base_inference.h  inference_impl.cpp  inference_impl.h  inference_singleton.cpp  inference_singleton.h
gst/common/: CMakeLists.txt  blob2metadata.cpp  blob2metadata.h  gst_allocator_wrapper.cpp  gst_allocator_wrapper.h  gst_vaapi_helper.cpp  gst_vaapi_helper.h  gva_buffer_map.cpp  gva_buffer_map.h  gva_caps.h  gva_utils.c  gva_utils.cpp  gva_utils.h  logger_functions.cpp  logger_functions.h  meta_converters.cpp  meta_converters.h  read_model_proc.cpp  read_model_proc.h
gst/elements/: CMakeLists.txt  elements.c
gst/gvaitttracer/: CMakeLists.txt  gst_itt_tracer.c
gst/inference_elements/: CMakeLists.txt  gstgvaclassify.cpp  gstgvaclassify.h  gstgvadetect.cpp  gstgvainference.cpp
gst/preview_elements/: CMakeLists.txt
gst/registrator/: CMakeLists.txt  register_elements.c  register_elements.cpp
gst/runtime_feature_toggling/: CMakeLists.txt  environment_variable_options_reader.h
include/dlstreamer/: CMakeLists.txt  audio_info.h  context.h  dictionary.h  element.h  frame.h  frame_info.h  image_info.h  image_metadata.h  memory_mapper.h  memory_mapper_factory.h  memory_type.h  metadata.h  sink.h  source.h  tensor.h  tensor_info.h  transform.h  utils.h
inference_backend/: CMakeLists.txt
inference_backend/image_inference/: CMakeLists.txt  image_inference.cpp
inference_backend/logger/: CMakeLists.txt  logger.cpp  perf_logger.cpp
inference_backend/pre_proc/: CMakeLists.txt  pre_proc.cpp
python/: CMakeLists.txt
python/gstgva/: __init__.py  gva_json_meta.py  gva_tensor_meta.py  region_of_interest.py  tensor.py  util.py  video_frame.py  video_region_of_interest_meta.py
python/tests_gstgva/: test_audio_event.py
samples/: CMakeLists.txt  README.md  download_models.bat  download_models.sh  download_omz_models.bat  download_omz_models.sh  download_public_models.sh  model_index.yaml  model_index_schema.json  models.lst  models_omz.lst  models_omz_samples.lst  models_public.lst  people_on_the_stairs_models.lst  verified_models.json
samples/benchmark/: README.md  benchmark.sh
samples/cpp/: CMakeLists.txt
samples/gstreamer/: CMakeLists.txt  README.md  force_ximagesink.sh  model_index.yaml
samples/labels/: driver_actions.txt  face_bkgr.txt  imagenet_2012_bkgr.txt  imagenet_2015_bkgr.txt  person_bkgr.txt  vehicle-license-plate-bkgr.txt  vehicle-license-plate.txt
samples/model_downloader_configs/: intel_models.LST  intel_models_for_samples.LST  raw_models.LST
samples/model_optimizer_configs/: yolo_v3.json
samples/model_proc/: aclnet.json  age-gender-recognition-retail-0013.json  audio_detection.json  coco.json  emotions-recognition-retail-0003.json  face-detection-retail-0004.json  face-reidentification-retail-0095.json  faster-rcnn-coco.json  faster-rcnn-resnet101-coco-sparse-60-0001.json  human_pose_estimation-0001.json  icnet-camvid-ava-0001.json  instance-segmentation-security-1025.json  landmarks-regression-retail-0009.json  license-plate-recognition-barrier-0001.json  mobilenet-ssd.json  mobilenetv2_int8.json  pascal.json  pedestrian-detection-adas-binary-0001.json  person-attributes-recognition-crossroad-0200.json  person-attributes-recognition-crossroad-0230.json  person-vehicle-bike-detection-crossroad-0078.json  resnet-18-pytorch.json  resnet50-binary-0001.json  resnet50_int8.json  road-segmentation-adas-0001.json  semantic-segmentation-adas-0001.json  text-detection-0003.json  vehicle-attributes-recognition-barrier-0039.json  vehicle-detection-adas-0002.json  vehicle-license-plate-detection-barrier-0106.json  yolo-v2-ava-0001.json  yolo-v2-tf.json  yolo-v2-tiny-tf.json  yolo-v2-tiny-voc-tf.json  yolo-v2-voc-tf.json  yolo-v3-tf.json  yolo-v3-tiny.json  yolo-v4-tf.json  yolo_v3.json  yolov2_tiny_od_yolo_IR.json  (+1 more)
samples/models/: convert_mars_deepsort.py
samples/shell/: README.md  console_measure_fps.sh  console_measure_fps_cpu.sh  console_measure_fps_gpu.sh  face_detection_and_classification.sh  face_detection_multichannel.sh  json_messages.sh  object_detection_and_transcode.sh  object_detection_ssd.sh  security_barrier_camera.sh  stairway_human_pose.sh  tracking.sh  tracking_ext.sh  vaapi_prepoc.sh  vaapi_preproc.sh  vehicle_and_pedestrian_classification.sh  vehicle_detection_2sources_cpu.sh  vehicle_detection_2sources_gpu.sh  vehicle_license_plate_detection_barrier_0106.sh
src/: CMakeLists.txt
src/base/: CMakeLists.txt
tests/: CMakeLists.txt
utils/: CMakeLists.txt  lru_cache.h  named_pipe.cpp  named_pipe.h  scope_guard.h  so_loader.cpp  so_loader.h  utils.cpp  utils.h
win_samples/: CMakeLists.txt  README.md  download_models.bat
(+2561 files in other folders)
