# ==============================================================================
# Copyright (C) 2021-2022 Intel Corporation
#
# SPDX-License-Identifier: MIT
# ==============================================================================

# List of compilation target folders
add_subdirectory(base)
add_subdirectory(cpu)
add_subdirectory(ffmpeg)
add_subdirectory(gst)
add_subdirectory(opencl)
add_subdirectory(opencv)
add_subdirectory(openvino)
add_subdirectory(sycl)
add_subdirectory(utils)
add_subdirectory(vaapi)
