# ==============================================================================
# Copyright (C) 2021-2025 Intel Corporation
#
# SPDX-License-Identifier: MIT
# ==============================================================================

add_subdirectory(base)
add_subdirectory(cpu)
#add_subdirectory(ffmpeg)
add_subdirectory(gst)
add_subdirectory(opencl)
add_subdirectory(opencv)
add_subdirectory(openvino)
add_subdirectory(sycl)
add_subdirectory(utils)
add_subdirectory(vaapi)
